# sphinx-gitstamp

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: continuous-integration.yml
sphinx_gitstamp/: __init__.py
tests/: test_simple.py
tests/roots/test-root/: conf.py
